crates/top/re_sdk/src/lenses/snapshots/re_sdk__lenses__transform__test__add_one_to_leaves.snap
---
source: crates/top/re_sdk/src/lenses/transform.rs
expression: "format!(\"{}\", DisplayRB::from(result))"
---
┌──────────────────────────────────────────────────────────────┐
│ col                                                          │
│ ---                                                          │
│ type: nullable List[nullable FixedSizeList[nullable f64; 2]] │
╞══════════════════════════════════════════════════════════════╡
│ [[1.0, 1.0], [43.0, 43.0]]                                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[8.0, null], [8.0, 8.0]]                                    │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[18.0, 18.0]]                                               │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                                           │
└──────────────────────────────────────────────────────────────┘
