crates/top/re_sdk/src/lenses/snapshots/re_sdk__lenses__transform__test__convert_to_f32.snap
---
source: crates/top/re_sdk/src/lenses/transform.rs
expression: "format!(\"{}\", DisplayRB::from(result))"
---
┌──────────────────────────────────────────────────────────────┐
│ col                                                          │
│ ---                                                          │
│ type: nullable List[nullable FixedSizeList[nullable f32; 2]] │
╞══════════════════════════════════════════════════════════════╡
│ [[0.0, 0.0], [42.0, 42.0]]                                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[7.0, null], [7.0, 7.0]]                                    │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[17.0, 17.0]]                                               │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                                           │
└──────────────────────────────────────────────────────────────┘
