crates/top/re_sdk/src/lenses/snapshots/re_sdk__lenses__transform__test__flatten_multiple_elements.snap
---
source: crates/top/re_sdk/src/lenses/transform.rs
expression: "format!(\"{}\", DisplayRB::from(result))"
---
┌───────────────────────────────────┐
│ col                               │
│ ---                               │
│ type: nullable List[nullable i32] │
╞═══════════════════════════════════╡
│ [1, 2, 3, 4]                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [5, 6, 7, 8]                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [9]                               │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ null                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [10, 11]                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [32, 33, 34]                      │
└───────────────────────────────────┘
