crates/top/re_sdk/src/lenses/snapshots/re_sdk__lenses__transform__test__replace_nulls.snap
---
source: crates/top/re_sdk/src/lenses/transform.rs
expression: "format!(\"{}\", DisplayRB::from(result))"
---
┌──────────────────────────────────────────────────────────────┐
│ col                                                          │
│ ---                                                          │
│ type: nullable List[nullable FixedSizeList[nullable f64; 2]] │
╞══════════════════════════════════════════════════════════════╡
│ [[0.0, 0.0], [42.0, 42.0]]                                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[7.0, 1337.0], [7.0, 7.0]]                                  │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[17.0, 17.0]]                                               │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                                           │
└──────────────────────────────────────────────────────────────┘
