crates/top/re_sdk/src/lenses/snapshots/re_sdk__lenses__transform__test__simple.snap
---
source: crates/top/re_sdk/src/lenses/transform.rs
expression: "format!(\"{}\", DisplayRB::from(result.clone()))"
---
┌──────────────────────────────────────────────────────────────┐
│ col                                                          │
│ ---                                                          │
│ type: nullable List[nullable FixedSizeList[nullable f64; 2]] │
╞══════════════════════════════════════════════════════════════╡
│ [[0.0, 0.0], [42.0, 42.0]]                                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ null                                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[7.0, null], [7.0, 7.0]]                                    │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[17.0, 17.0]]                                               │
└──────────────────────────────────────────────────────────────┘
